--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,19 +5,19 @@
 <title>__TITLE__ - Delta Chat</title>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
-<link rel="stylesheet" href="/public/layout/base.css" type="text/css" />
+<link rel="stylesheet" href="{{ /public/layout/base.css | relative_url }}" type="text/css" />
 </head>
 
 <body id="top">
 
 <div id="menu">
 <ul>
-<li><a href="/__LANG__/"><span class="desktoponly">__STR_HOME__</span><span class="nodesktop">__STR_HOMESHORT__</span></a></li>
-<li><a href="features">__STR_WHY__</a></li>
-<li><a href="download">__STR_DOWNLOAD__</a></li>
-<li><a href="support">__STR_SUPPORT__</a></li>
-<li><a href="for-business"><span class="desktoponly">__STR_BUSINESS__</span><span class="nodesktop">__STR_BUSINESS_SHORT__</span></a></li>
-<li><a href="help"><span class="desktoponly">__STR_HELP__</span><span class="nodesktop">?</span></a></li>
+<li><a href="index.html"><span class="desktoponly">__STR_HOME__</span><span class="nodesktop">__STR_HOMESHORT__</span></a></li>
+<li><a href="features.html">__STR_WHY__</a></li>
+<li><a href="download.html">__STR_DOWNLOAD__</a></li>
+<li><a href="support.html">__STR_SUPPORT__</a></li>
+<li><a href="for-business.html"><span class="desktoponly">__STR_BUSINESS__</span><span class="nodesktop">__STR_BUSINESS_SHORT__</span></a></li>
+<li><a href="help.html"><span class="desktoponly">__STR_HELP__</span><span class="nodesktop">?</span></a></li>
 </ul>
 </div>
 
