--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 <title>__TITLE__ - Delta Chat</title>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
-<link rel="stylesheet" href="{{ /public/layout/base.css | relative_url }}" type="text/css" />
+<link rel="stylesheet" href="{{ "/public/layout/base.css" | relative_url }}" type="text/css" />
 </head>
 
 <body id="top">
