--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 <title>__TITLE__ - Delta Chat</title>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
-<link rel="stylesheet" href="{{ "/public/layout/base.css" | relative_url }}" type="text/css" />
+<link rel="stylesheet" href="../public/layout/base.css" type="text/css" />
 </head>
 
 <body id="top">
@@ -31,9 +31,9 @@
 <p>
 © 2017 Delta Chat contributors &ndash; <a href="imprint">__STR_IMPRINT__</a> 
 &ndash; <span class="desktoponly">__STR_LANGUAGE__:</span> 
-<a href="/en/">En</a> 
+<a href="../en/">En</a> 
 <a href="https://jaworski-pawel.github.io/Delta/">Pl</a>
-<a href="/de/">De</a> 
+<a href="../de/">De</a> 
 </p>
 </div>
 
