--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-<title>__TITLE__ - Delta Chat</title>
+<title>{{ page.title }} - Delta Chat</title>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
 <link rel="stylesheet" href="../public/layout/base.css" type="text/css" />
@@ -12,12 +12,12 @@
 
 <div id="menu">
 <ul>
-<li><a href="index.html"><span class="desktoponly">__STR_HOME__</span><span class="nodesktop">__STR_HOMESHORT__</span></a></li>
-<li><a href="features.html">__STR_WHY__</a></li>
-<li><a href="download.html">__STR_DOWNLOAD__</a></li>
-<li><a href="support.html">__STR_SUPPORT__</a></li>
-<li><a href="for-business.html"><span class="desktoponly">__STR_BUSINESS__</span><span class="nodesktop">__STR_BUSINESS_SHORT__</span></a></li>
-<li><a href="help.html"><span class="desktoponly">__STR_HELP__</span><span class="nodesktop">?</span></a></li>
+<li><a href="index.html">Home</a></li>
+<li><a href="features.html">Why?</a></li>
+<li><a href="download.html">Download</a></li>
+<li><a href="support.html">Support</a></li>
+<li><a href="for-business.html"><span class="desktoponly">For </span>Business</a></li>
+<li><a href="help.html"><span class="desktoponly">Help</span><span class="nodesktop">?</span></a></li>
 </ul>
 </div>
 
@@ -29,8 +29,8 @@
 
 <div id="footer">
 <p>
-© 2017 Delta Chat contributors &ndash; <a href="imprint">__STR_IMPRINT__</a> 
-&ndash; <span class="desktoponly">__STR_LANGUAGE__:</span> 
+© 2017 Delta Chat contributors &ndash; <a href="imprint">Imprint</a> 
+&ndash; <span class="desktoponly">Language:</span> 
 <a href="../en/">En</a> 
 <a href="https://jaworski-pawel.github.io/Delta/">Pl</a>
 <a href="../de/">De</a> 
