Do not use .html suffix.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,12 +12,12 @@
 
 <div id="menu">
 <ul>
-<li><a href="index.html">Home</a></li>
-<li><a href="features.html">Why?</a></li>
-<li><a href="download.html">Download</a></li>
-<li><a href="support.html">Support</a></li>
-<li><a href="for-business.html"><span class="desktoponly">For </span>Business</a></li>
-<li><a href="help.html"><span class="desktoponly">Help</span><span class="nodesktop">?</span></a></li>
+<li><a href="../">Home</a></li>
+<li><a href="features">Why?</a></li>
+<li><a href="download">Download</a></li>
+<li><a href="support">Support</a></li>
+<li><a href="for-business"><span class="desktoponly">For </span>Business</a></li>
+<li><a href="help"><span class="desktoponly">Help</span><span class="nodesktop">?</span></a></li>
 </ul>
 </div>
 
@@ -29,7 +29,7 @@
 
 <div id="footer">
 <p>
-© 2017 Delta Chat contributors &ndash; <a href="imprint.html">Imprint</a> 
+© 2017 Delta Chat contributors &ndash; <a href="imprint">Imprint</a> 
 &ndash; <span class="desktoponly">Language:</span> 
 <a href="../en/">En</a> 
 <a href="https://jaworski-pawel.github.io/Delta/">Pl</a>
