--- a/_layouts/default-de.html
+++ b/_layouts/default-de.html
@@ -12,12 +12,12 @@
 
 <div id="menu">
 <ul>
-<li><a href="index.html"><span class="desktoponly">Startseite</span><span class="nodesktop">Start</span></a></li>
-<li><a href="features.html">Warum</a></li>
-<li><a href="download.html">Download</a></li>
-<li><a href="support.html">Support</a></li>
-<li><a href="for-business.html"><span class="desktoponly">Für </span>Firmen</a></li>
-<li><a href="help.html"><span class="desktoponly">Hilfe</span><span class="nodesktop">?</span></a></li>
+<li><a href="../"><span class="desktoponly">Startseite</span><span class="nodesktop">Start</span></a></li>
+<li><a href="features">Warum</a></li>
+<li><a href="download">Download</a></li>
+<li><a href="support">Support</a></li>
+<li><a href="for-business"><span class="desktoponly">Für </span>Firmen</a></li>
+<li><a href="help"><span class="desktoponly">Hilfe</span><span class="nodesktop">?</span></a></li>
 </ul>
 </div>
 
@@ -29,7 +29,7 @@
 
 <div id="footer">
 <p>
-© 2017 Delta Chat contributors &ndash; <a href="imprint.html">Impressum</a> 
+© 2017 Delta Chat contributors &ndash; <a href="imprint">Impressum</a> 
 &ndash; <span class="desktoponly">Language:</span> 
 <a href="../en/">En</a> 
 <a href="https://jaworski-pawel.github.io/Delta/">Pl</a>
