--- a/_layouts/default-de.html
+++ b/_layouts/default-de.html
@@ -12,7 +12,7 @@
 
 <div id="menu">
 <ul>
-<li><a href="../"><span class="desktoponly">Startseite</span><span class="nodesktop">Start</span></a></li>
+<li><a href="../de/"><span class="desktoponly">Startseite</span><span class="nodesktop">Start</span></a></li>
 <li><a href="features">Warum</a></li>
 <li><a href="download">Download</a></li>
 <li><a href="support">Support</a></li>
