--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 
 <div id="menu">
 <ul>
-<li><a href="../en/">Home</a></li>
+<li><a href="../">Home</a></li> <!-- restart language detection, useful if other languages link to english pages -->
 <li><a href="features">Why?</a></li>
 <li><a href="download">Download</a></li>
 <li><a href="support">Support</a></li>
