--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,8 @@
 <title>{{ page.title }} - Delta Chat</title>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
+<meta name="description" content="Delta Chat - Email Based Instant Messenger" />
+<meta name="keywords" content="delta chat, email messaging app, download delta chat" />
 <link rel="stylesheet" href="../public/layout/base.css" type="text/css" />
 </head>
 
@@ -17,7 +19,7 @@
 <li><a href="download">Download</a></li>
 <li><a href="support">Support</a></li>
 <li><a href="for-business"><span class="desktoponly">For </span>Business</a></li>
-<li><a href="help"><span class="desktoponly">Help</span><span class="nodesktop">?</span></a></li>
+<li><a href="help"><span class="desktoponly">FAQs</span><span class="nodesktop">FAQs</span></a></li>
 </ul>
 </div>
 
