--- a/_layouts/default-de.html
+++ b/_layouts/default-de.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
 
 <head>
 <title>{{ page.title }} - Delta Chat</title>
@@ -30,7 +30,7 @@
 <div id="footer">
 <p>
 © 2017 Delta Chat contributors &ndash; <a href="imprint">Impressum</a> 
-&ndash; <span class="desktoponly">Language:</span> 
+&ndash; <span class="desktoponly">Sprache:</span>
 <a href="../en/">En</a> 
 <a href="https://jaworski-pawel.github.io/Delta/">Pl</a>
 <a href="../de/">De</a> 
