Shorten mobile-menu for english pages.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
 <li><a href="download">Download</a></li>
 <li><a href="support">Support</a></li>
 <li><a href="for-business"><span class="desktoponly">For </span>Business</a></li>
-<li><a href="help"><span class="desktoponly">FAQs</span><span class="nodesktop">FAQs</span></a></li>
+<li><a href="help"><span class="desktoponly">FAQs</span><span class="nodesktop">?</span></a></li>
 </ul>
 </div>
 
