--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,14 +18,34 @@
 <li><a href="features">Why?</a></li>
 <li><a href="download">Download</a></li>
 <li><a href="support">Support</a></li>
-<li><a href="for-business"><span class="desktoponly">For </span>Business</a></li>
+<!-- <li><a href="for-business"><span class="desktoponly">For </span>Business</a></li> -->
+<li><a href="blog">Blog</a></li>
 <li><a href="help">FAQs</a></li>
 </ul>
 </div>
 
 <div id="content">
 
+
+{% if page.is_post == true %}
+<h1>{{ page.title }}</h1>
+<p><em>{{ page.date | date: "%B %d, %Y" }}</em></p>
+{% endif %}
+
+
 {{ content }}
+
+
+{% if page.is_post == true %}
+{% if page.previous.url %}
+<a href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a> &middot;
+{% endif %}
+<a href="blog">Index</a>
+{% if page.next.url %}
+&middot; <a href="{{page.next.url}}">{{page.next.title}} &raquo;</a>
+{% endif %}
+{% endif %}
+
 
 </div>
 
