Add an RSS feed.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
 <meta name="description" content="Delta Chat - Email Based Instant Messenger" />
 <meta name="keywords" content="delta chat, email messaging app, download delta chat" />
 <link rel="stylesheet" href="../public/layout/base.css" type="text/css" />
+<link rel="alternate" href="https://delta.chat/feed.xml" type="application/atom+xml" title="Delta Chat News" />
 </head>
 
 <body id="top">
