--- a/_layouts/default-de.html
+++ b/_layouts/default-de.html
@@ -6,6 +6,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
 <link rel="stylesheet" href="../public/layout/base.css" type="text/css" />
+<link rel="alternate" href="https://delta.chat/feed.xml" type="application/atom+xml" title="Delta Chat News" />
 </head>
 
 <body id="top">
