Add link to blog to german layout.

--- a/_layouts/default-de.html
+++ b/_layouts/default-de.html
@@ -30,7 +30,9 @@
 
 <div id="footer">
 <p>
-© 2017 Delta Chat contributors &ndash; <a href="imprint">Impressum</a> 
+© 2017 Delta Chat contributors
+&ndash; <a href="../en/blog">Blog</a>
+&ndash; <a href="imprint">Impressum</a>
 &ndash; <span class="desktoponly">Sprache:</span>
 <a href="../en/">En</a> 
 <a href="https://jaworski-pawel.github.io/Delta/">Pl</a>
