Spanish index added

--- a/_layouts/default-de.html
+++ b/_layouts/default-de.html
@@ -35,7 +35,7 @@
 &ndash; <a href="imprint">Impressum</a>
 &ndash; <span class="desktoponly">Sprache:</span>
 <a href="../en/">En</a> 
-<a href="../es/">En</a> 
+<a href="../es/">Es</a> 
 <a href="https://jaworski-pawel.github.io/Delta/">Pl</a>
 <a href="../de/">De</a> 
 </p>
