--- a/_layouts/default-es.html
+++ b/_layouts/default-es.html
@@ -59,7 +59,7 @@
 &ndash; <span class="desktoponly">Language:</span> 
 <a href="../en/">En</a> 
 <a href="https://jaworski-pawel.github.io/Delta/">Pl</a>
-<a href="../es/">En</a> 
+<a href="../es/">Es</a> 
 <a href="../de/">De</a> 
 </p>
 </div>
