--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,7 +58,7 @@
 © 2017 Delta Chat contributors &ndash; <a href="imprint">Imprint</a> 
 &ndash; <span class="desktoponly">Language:</span> 
 <a href="../en/">En</a> 
-<a href="../es/">En</a> 
+<a href="../es/">Es</a> 
 <a href="https://jaworski-pawel.github.io/Delta/">Pl</a>
 <a href="../de/">De</a> 
 </p>
