Add Portuguese. Thanks to @luisfsr.

--- a/_layouts/default-es.html
+++ b/_layouts/default-es.html
@@ -55,12 +55,15 @@
 
 <div id="footer">
 <p>
-© 2017 Delta Chat contributors &ndash; <a href="imprint">Imprint</a> 
+© 2017 Delta Chat contributors 
+&ndash; <a href="../en/blog">Blog</a>
+&ndash; <a href="../en/imprint">Imprint</a> 
 &ndash; <span class="desktoponly">Language:</span> 
+<a href="../de/">De</a> 
 <a href="../en/">En</a> 
 <a href="../es/">Es</a> 
 <a href="https://jaworski-pawel.github.io/Delta/">Pl</a>
-<a href="../de/">De</a> 
+<a href="../pt/">Pt</a> 
 </p>
 </div>
 
