--- a/_layouts/default-pt.html
+++ b/_layouts/default-pt.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="pt">
 
 <head>
 <title>{{ page.title }} - Delta Chat</title>
@@ -13,11 +13,11 @@
 
 <div id="menu">
 <ul>
-<li><a href="../de/"><span class="desktoponly">Startseite</span><span class="nodesktop">Start</span></a></li>
-<li><a href="features">Warum</a></li>
-<li><a href="download">Download</a></li>
-<li><a href="support">Support</a></li>
-<li><a href="help"><span class="desktoponly">Hilfe</span><span class="nodesktop">?</span></a></li>
+<li><a href="../pt/">Inicio</a></li>
+<li><a href="features">Por que?</a></li>
+<li><a href="download">Baixe</a></li>
+<li><a href="support">Como ajudar</a></li>
+<li><a href="help">Perguntas</a></li>
 </ul>
 </div>
 
@@ -31,8 +31,8 @@
 <p>
 © 2017 Delta Chat contributors
 &ndash; <a href="../en/blog">Blog</a>
-&ndash; <a href="imprint">Impressum</a>
-&ndash; <span class="desktoponly">Sprache:</span>
+&ndash; <a href="../en/imprint">Imprint</a>
+&ndash; <span class="desktoponly">Língua:</span>
 <a href="../de/">De</a> 
 <a href="../en/">En</a> 
 <a href="../es/">Es</a> 
