--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,10 +57,11 @@
 <p>
 © 2017 Delta Chat contributors &ndash; <a href="imprint">Imprint</a> 
 &ndash; <span class="desktoponly">Language:</span> 
+<a href="../de/">De</a> 
 <a href="../en/">En</a> 
 <a href="../es/">Es</a> 
 <a href="https://jaworski-pawel.github.io/Delta/">Pl</a>
-<a href="../de/">De</a> 
+<a href="../pt/">Pt</a> 
 </p>
 </div>
 
