--- a/_layouts/default-pt.html
+++ b/_layouts/default-pt.html
@@ -13,8 +13,8 @@
 
 <div id="menu">
 <ul>
-<li><a href="../pt/">Inicio</a></li>
-<li><a href="features">Por que?</a></li>
+<li><a href="../pt/">Início</a></li>
+<li><a href="features">Por quê?</a></li>
 <li><a href="download">Baixe</a></li>
 <li><a href="support">Como ajudar</a></li>
 <li><a href="help">Perguntas</a></li>
