Update Italian technically.

--- a/_layouts/default-es.html
+++ b/_layouts/default-es.html
@@ -62,6 +62,7 @@
 <a href="../de/">De</a> 
 <a href="../en/">En</a> 
 <a href="../es/">Es</a> 
+<a href="../it/">It</a> 
 <a href="https://jaworski-pawel.github.io/Delta/">Pl</a>
 <a href="../pt/">Pt</a> 
 </p>
