Move language list to include file.

--- a/_layouts/default-it.html
+++ b/_layouts/default-it.html
@@ -57,12 +57,7 @@
 <p>
 © 2017 Delta Chat contributors &ndash; <a href="imprint">Imprint</a>
 &ndash; <span class="desktoponly">Lingue:</span>
-<a href="../de/">De</a>
-<a href="../en/">En</a>
-<a href="../es/">Es</a>
-<a href="../it/">It</a> 
-<a href="https://jaworski-pawel.github.io/Delta/">Pl</a>
-<a href="../pt/">Pt</a>
+{% include footer-languages.html %}
 </p>
 </div>
 
