--- a/_layouts/default-pt.html
+++ b/_layouts/default-pt.html
@@ -33,12 +33,7 @@
 &ndash; <a href="../en/blog">Blog</a>
 &ndash; <a href="../en/imprint">Imprint</a>
 &ndash; <span class="desktoponly">Língua:</span>
-<a href="../de/">De</a> 
-<a href="../en/">En</a> 
-<a href="../es/">Es</a> 
-<a href="../it/">It</a> 
-<a href="https://jaworski-pawel.github.io/Delta/">Pl</a>
-<a href="../pt/">Pt</a> 
+{% include footer-languages.html %}
 </p>
 </div>
 
