--- a/_layouts/default-it.html
+++ b/_layouts/default-it.html
@@ -15,7 +15,7 @@
 
 <div id="menu">
 <ul>
-<li><a href="../en/">Home</a></li>
+<li><a href="../it/">Home</a></li>
 <li><a href="features">Perché?</a></li>
 <li><a href="download">Download</a></li>
 <li><a href="support">Supporto</a></li>
