--- a/_layouts/default-it.html
+++ b/_layouts/default-it.html
@@ -39,13 +39,9 @@
 
 {% if page.is_post == true %}
 <p class="menulike">
-{% if page.previous.url %}
-<a href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a> &middot;
-{% endif %}
+{% if page.previous.url %}<a href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a> |{% endif %}
 <a href="blog">Index</a>
-{% if page.next.url %}
-&middot; <a href="{{page.next.url}}">{{page.next.title}} &raquo;</a>
-{% endif %}
+{% if page.next.url %}| <a href="{{page.next.url}}">{{page.next.title}} &raquo;</a>{% endif %}
 </p>
 <p class="menulike"><a href="../feed.xml" class="feed">Iscriviti al feed</a></p>
 {% endif %}
