Link to blog from the German and Portugues main menu.

--- a/_layouts/default-pt.html
+++ b/_layouts/default-pt.html
@@ -17,6 +17,7 @@
 <li><a href="features">Por quê?</a></li>
 <li><a href="download">Baixe</a></li>
 <li><a href="support">Como ajudar</a></li>
+<li><a href="blog">Blog</a></li>
 <li><a href="help">Perguntas</a></li>
 </ul>
 </div>
@@ -30,7 +31,6 @@
 <div id="footer">
 <p>
 © 2017 Delta Chat contributors
-&ndash; <a href="../en/blog">Blog</a>
 &ndash; <a href="../en/imprint">Imprint</a>
 &ndash; <span class="desktoponly">Língua:</span>
 {% include footer-languages.html %}
