--- a/_layouts/default-de.html
+++ b/_layouts/default-de.html
@@ -17,6 +17,7 @@
 <li><a href="features">Warum</a></li>
 <li><a href="download">Download</a></li>
 <li><a href="support">Support</a></li>
+<li><a href="blog">Blog</a></li>
 <li><a href="help"><span class="desktoponly">Hilfe</span><span class="nodesktop">?</span></a></li>
 </ul>
 </div>
@@ -30,7 +31,6 @@
 <div id="footer">
 <p>
 © 2017 Delta Chat contributors
-&ndash; <a href="../en/blog">Blog</a>
 &ndash; <a href="imprint">Impressum</a>
 &ndash; <span class="desktoponly">Sprache:</span>
 {% include footer-languages.html %}
