--- a/_layouts/default-it.html
+++ b/_layouts/default-it.html
@@ -18,7 +18,7 @@
 <li><a href="../it/">Home</a></li>
 <li><a href="features">Perché?</a></li>
 <li><a href="download">Download</a></li>
-<li><a href="support">Supporto</a></li>
+<li><a href="support">Supporta</a></li>
 <li><a href="blog">Blog</a></li>
 <li><a href="help">FAQ</a></li>
 </ul>
@@ -39,7 +39,7 @@
 {% if page.is_post == true %}
 <p class="menulike">
 {% if page.previous.url %}<a href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a> |{% endif %}
-<a href="blog">Index</a>
+<a href="blog">Indice</a>
 {% if page.next.url %}| <a href="{{page.next.url}}">{{page.next.title}} &raquo;</a>{% endif %}
 </p>
 <p class="menulike"><a href="../feed.xml" class="feed">Iscriviti al feed</a></p>
