--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -152,6 +152,6 @@ pre, blockquote { padding: 0.5em 1em; }
 .feed {
   margin-left: 3px;
   padding: 0 0 0 19px;
-  background: url("../assets/css/feed-icon.png") no-repeat 0 50%;
+  background: url(feed-icon.png) no-repeat 0 50%;
 } 
 
