Integrate Russian layout.

--- a/_includes/footer-languages.html
+++ b/_includes/footer-languages.html
@@ -4,3 +4,4 @@
 <a href="../it/">It</a> 
 <a href="https://jaworski-pawel.github.io/Delta/">Pl</a>
 <a href="../pt/">Pt</a> 
+<a href="../ru/">Ru</a>
