--- a/_layouts/default-ru.html
+++ b/_layouts/default-ru.html
@@ -50,7 +50,7 @@
 
 <div id="footer">
 <p>
-© 2017 Delta Chat участники &ndash; <a href="imprint">Выходные данные</a> 
+© 2017 Delta Chat участники &ndash; <a href="../en/imprint">Выходные данные</a> 
 &ndash; <span class="desktoponly">Язык:</span> 
 {% include footer-languages.html %}
 </p>
