added missing and corrected existing imprints

--- a/_layouts/default-es.html
+++ b/_layouts/default-es.html
@@ -51,8 +51,8 @@
 <div id="footer">
 <p>
 © 2017 Delta Chat contributors 
-&ndash; <a href="../en/imprint">Imprint</a> 
-&ndash; <span class="desktoponly">Language:</span> 
+&ndash; <a href="imprint">Aviso legal</a> 
+&ndash; <span class="desktoponly">Lengua:</span> 
 {% include footer-languages.html %}
 </p>
 </div>
