--- a/_layouts/default-it.html
+++ b/_layouts/default-it.html
@@ -50,8 +50,8 @@
 
 <div id="footer">
 <p>
-© 2017 Delta Chat contributors &ndash; <a href="../en/imprint">Imprint</a>
-&ndash; <span class="desktoponly">Lingue:</span>
+© 2017 Delta Chat contributors &ndash; <a href="imprint">Imprint</a>
+&ndash; <span class="desktoponly">Lingua:</span>
 {% include footer-languages.html %}
 </p>
 </div>
