--- a/_layouts/default-pt.html
+++ b/_layouts/default-pt.html
@@ -31,8 +31,8 @@
 <div id="footer">
 <p>
 © 2017 Delta Chat contributors
-&ndash; <a href="../en/imprint">Imprint</a>
-&ndash; <span class="desktoponly">Língua:</span>
+&ndash; <a href="imprint">Aviso legal</a>
+&ndash; <span class="desktoponly">Lingue:</span>
 {% include footer-languages.html %}
 </p>
 </div>
