Footer updates for all languages

--- a/_layouts/default-de.html
+++ b/_layouts/default-de.html
@@ -30,10 +30,12 @@
 
 <div id="footer">
 <p>
-© 2017 Delta Chat contributors
-&ndash; <a href="imprint">Impressum</a>
-&ndash; <span class="desktoponly">Sprache:</span>
+<span class="desktoponly">Sprache:</span>
 {% include footer-languages.html %}
+<br>
+<a href="imprint">Impressum</a>
+<br>
+© 2017 Delta Chat contributors
 </p>
 </div>
 
