--- a/_layouts/default-es.html
+++ b/_layouts/default-es.html
@@ -50,10 +50,12 @@
 
 <div id="footer">
 <p>
-© 2017 Delta Chat contributors 
-&ndash; <a href="imprint">Aviso legal</a> 
-&ndash; <span class="desktoponly">Lengua:</span> 
+<span class="desktoponly">Lengua:</span>
 {% include footer-languages.html %}
+<br>
+<a href="imprint">Aviso legal</a>
+<br>
+© 2017 Delta Chat contributors
 </p>
 </div>
 
