--- a/_layouts/default-it.html
+++ b/_layouts/default-it.html
@@ -50,9 +50,12 @@
 
 <div id="footer">
 <p>
-© 2017 Delta Chat contributors &ndash; <a href="imprint">Imprint</a>
-&ndash; <span class="desktoponly">Lingua:</span>
+<span class="desktoponly">Lingue:</span>
 {% include footer-languages.html %}
+<br>
+<a href="imprint">Imprint</a>
+<br>
+© 2017 Delta Chat contributors
 </p>
 </div>
 
