--- a/_layouts/default-ru.html
+++ b/_layouts/default-ru.html
@@ -50,9 +50,12 @@
 
 <div id="footer">
 <p>
-© 2017 Delta Chat участники &ndash; <a href="imprint">Выходные данные</a> 
-&ndash; <span class="desktoponly">Язык:</span> 
+<span class="desktoponly">Язык:</span> 
 {% include footer-languages.html %}
+<br>
+<a href="imprint">Выходные данные</a>
+<br>
+© 2017 Delta Chat участники
 </p>
 </div>
 
