--- a/_includes/footer-languages.html
+++ b/_includes/footer-languages.html
@@ -1,7 +1,7 @@
-<a href="../de/">De</a> 
-<a href="../en/">En</a> 
-<a href="../es/">Es</a> 
-<a href="../it/">It</a> 
-<a href="https://jaworski-pawel.github.io/Delta/">Pl</a>
-<a href="../pt/">Pt</a> 
-<a href="../ru/">Ru</a>
+<a href="../de/">DE</a>  |
+<a href="../en/">EN</a>  |
+<a href="../es/">ES</a>  |
+<a href="../it/">IT</a>  |
+<a href="https://jaworski-pawel.github.io/Delta/">PL</a>  |
+<a href="../pt/">PT</a>   |
+<a href="../ru/">RU</a>
