--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,11 +16,11 @@
 <div id="menu">
 <ul>
 <li><a href="../en/">Home</a></li>
-<li><a href="features">Why?</a></li>
+<li><a href="features">Why</a></li>
 <li><a href="download">Download</a></li>
 <li><a href="support">Contribute</a></li>
 <li><a href="blog">Blog</a></li>
-<li><a href="help">FAQs</a></li>
+<li><a href="help">FAQ</a></li>
 </ul>
 </div>
 
