--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
 <a href="blog">Index</a>
 {% if page.next.url %}| <a href="{{page.next.url}}">{{page.next.title}} &raquo;</a>{% endif %}
 </p>
-<p class="menulike"><a href="../feed.xml" class="feed">Subscribe to our feed</a></p>
+<p class="menulike">Subscribe to our feed: {% include subscribe-to-feed-links.html %}</p>
 {% endif %}
 
 
