--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -150,8 +150,20 @@ pre, blockquote { padding: 0.5em 1em; }
 
 
 .feed {
-  margin-left: 3px;
-  padding: 0 0 0 19px;
+  margin-left: 9px;
+  padding: 0 0 0 21px;
   background: url(feed-icon.png) no-repeat 0 50%;
-} 
+}
+
+.friendica {
+  margin-left: 9px;
+  padding: 0 0 0 21px;
+  background: url(friendica-icon.png) no-repeat 0 50%;
+}
+
+.twitter {
+  margin-left: 9px;
+  padding: 0 0 0 21px;
+  background: url(twitter-icon.png) no-repeat 0 50%;
+}
 
