Happy new year :)

--- a/_layouts/default-pt.html
+++ b/_layouts/default-pt.html
@@ -35,7 +35,7 @@
 <br>
 <a href="imprint">Aviso legal</a>
 <br>
-© 2017 Delta Chat contributors
+© 2017, 2018 Delta Chat contributors
 </p>
 </div>
 
