--- a/_layouts/default-es.html
+++ b/_layouts/default-es.html
@@ -37,7 +37,7 @@
 <br>
 <a href="imprint">Aviso legal</a>
 <br>
-© 2017 Delta Chat contributors
+© 2017, 2018 Delta Chat contributors
 </p>
 </div>
 
