rename file 'support' to 'contribute'

--- a/_layouts/default-de.html
+++ b/_layouts/default-de.html
@@ -16,7 +16,7 @@
 <li><a href="../de/"><span class="desktoponly">Startseite</span><span class="nodesktop">Start</span></a></li>
 <li><a href="features">Warum</a></li>
 <li><a href="download">Download</a></li>
-<li><a href="support">Mitwirken</a></li>
+<li><a href="contribute">Mitwirken</a></li>
 <li><a href="blog">Blog</a></li>
 <li><a href="help"><span class="desktoponly">Hilfe</span><span class="nodesktop">?</span></a></li>
 </ul>
