--- a/_layouts/default-es.html
+++ b/_layouts/default-es.html
@@ -18,7 +18,7 @@
 <li><a href="../es/">Inicio</a></li>
 <li><a href="features">Por qué?</a></li>
 <li><a href="download">Descargar</a></li>
-<li><a href="support">Soporte</a></li>
+<li><a href="contribute">Soporte</a></li>
 <li><a href="blog">Blog</a></li>
 <li><a href="help">Preguntas</a></li>
 </ul>
