--- a/_layouts/default-ru.html
+++ b/_layouts/default-ru.html
@@ -18,7 +18,7 @@
 <li><a href="../ru/">Главная</a></li>
 <li><a href="features">Зачем?</a></li>
 <li><a href="download">Скачать</a></li>
-<li><a href="support">Содействовать</a></li>
+<li><a href="contribute">Содействовать</a></li>
 <li><a href="blog">Блог</a></li>
 <li><a href="help">Помощь</a></li>
 </ul>
