--- a/_layouts/default-it.html
+++ b/_layouts/default-it.html
@@ -18,7 +18,7 @@
 <li><a href="../it/">Home</a></li>
 <li><a href="features">Perché?</a></li>
 <li><a href="download">Download</a></li>
-<li><a href="support">Supporta</a></li>
+<li><a href="contribute">Supporta</a></li>
 <li><a href="blog">Blog</a></li>
 <li><a href="help">FAQ</a></li>
 </ul>
