--- a/_layouts/default-pt.html
+++ b/_layouts/default-pt.html
@@ -16,7 +16,7 @@
 <li><a href="../pt/">Início</a></li>
 <li><a href="features">Por quê?</a></li>
 <li><a href="download">Baixe</a></li>
-<li><a href="support">Como ajudar</a></li>
+<li><a href="contribute">Como ajudar</a></li>
 <li><a href="blog">Blog</a></li>
 <li><a href="help">Perguntas</a></li>
 </ul>
