Add french localisation (merci, Arnaud)

--- a/_includes/footer-languages.html
+++ b/_includes/footer-languages.html
@@ -1,6 +1,7 @@
 <a href="../de/">DE</a>  |
 <a href="../en/">EN</a>  |
 <a href="../es/">ES</a>  |
+<a href="../fr/">FR</a>  |
 <a href="../it/">IT</a>  |
 <a href="https://jaworski-pawel.github.io/Delta/">PL</a>  |
 <a href="../pt/">PT</a>   |
