--- a/_layouts/default-fr.html
+++ b/_layouts/default-fr.html
@@ -1,48 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <title>{{ page.title }} - Delta Chat</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
+    <meta name="description" content="Delta Chat - Email Based Instant Messenger" />
+    <meta name="keywords" content="delta chat, email messaging app, download delta chat" />
+    <link rel="stylesheet" href="../assets/css/base.css" type="text/css" />
+    <link rel="alternate" href="https://delta.chat/feed.xml" type="application/atom+xml" title="Delta Chat News" />
+  </head>
 
-<head>
-<title>{{ page.title }} - Delta Chat</title>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
-<meta name="description" content="Delta Chat - Email Based Instant Messenger" />
-<meta name="keywords" content="delta chat, email messaging app, download delta chat" />
-<link rel="stylesheet" href="../assets/css/base.css" type="text/css" />
-<link rel="alternate" href="https://delta.chat/feed.xml" type="application/atom+xml" title="Delta Chat News" />
-</head>
+  <body id="top">
+    <div id="menu">
+      <ul>
+        <li><a href="../fr/">Accueil</a></li>
+        <li><a href="features">Présentation</a></li>
+        <li><a href="download">Téléchargement</a></li>
+        <li><a href="contribute">Contribuer</a></li>
+        <li><a href="blog">Blog</a></li>
+        <li><a href="help">FAQ</a></li>
+      </ul>
+    </div>
 
-<body id="top">
+    <div id="content">
+      {{ content }}
+    </div>
 
-<div id="menu">
-<ul>
-<li><a href="../fr/">Home</a></li>
-<li><a href="features">Pourquoi</a></li>
-<li><a href="download">Téléchargement</a></li>
-<li><a href="contribute">Contribuer</a></li>
-<li><a href="blog">Blog</a></li>
-<li><a href="help">FAQ</a></li>
-</ul>
-</div>
-
-<div id="content">
-
-
-{{ content }}
-
-
-</div>
-
-<div id="footer">
-<p>
-<span class="desktoponly">Langue:</span>
-{% include footer-languages.html %}
-<br>
-<a href="imprint">Imprimer</a>
-<br>
-© 2017, 2018 Delta Chat contributeurs
-</p>
-</div>
-
-</body>
-
+    <div id="footer">
+      <p>
+        <span class="desktoponly">Langues:</span>
+        {% include footer-languages.html %}
+        <br>
+        <a href="imprint">Contact et mentions légales</a>
+        <br>
+        © 2017, 2018 Delta Chat contributors
+        </p>
+    </div>
+  </body>
 </html>
