--- a/_layouts/default-fr.html
+++ b/_layouts/default-fr.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <title>{{ page.title }} - Delta Chat</title>
     <meta charset="UTF-8" />
