add albanian to language selectors

--- a/_includes/footer-languages.html
+++ b/_includes/footer-languages.html
@@ -5,4 +5,5 @@
 <a href="../it/">IT</a>  |
 <a href="https://jaworski-pawel.github.io/Delta/">PL</a>  |
 <a href="../pt/">PT</a>   |
-<a href="../ru/">RU</a>
+<a href="../ru/">RU</a>  |
+<a href="../sq/">SQ</a>
