simplify index page

--- a/_includes/slider-begin.html
+++ b/_includes/slider-begin.html
@@ -1,3 +1,5 @@
+<style>
+
 /** again, mobile first **/
 
 #content {
@@ -39,12 +41,12 @@
 
 #contentWrapper div h1 {
     margin: 0 !important;
-    padding: 1em 0em 0em 0em;
+    padding: 1em 0em 0.4em 0em;
 }
 
 #contentWrapper div p {
     margin: 0 !important;
-    padding: 1em 0em 0em 0em;
+    padding: 0;
 }
 
 
@@ -121,4 +123,17 @@
                     background-color: #484848;
                     color: #FFFFFF;
                 }*/
+
+</style>
+
+<script>
+
+document.write(	'<di' + 'v id="contentContainer"><di' + 'v id="contentWrapper">'
+		+		'<di' + 'v>'
+			);
+
+</script>
+
+{% assign imgi = 1 %}
+<img src="../assets/home/intro1.png" alt="" />
 
