move download-buttons to slider-end.html

--- a/_includes/slider-end.html
+++ b/_includes/slider-end.html
@@ -103,3 +103,5 @@ function goToNextItem() {
 
 </script>
 
+[<img src="../assets/home/get-it-on-fdroid.png" alt="Get it on F-Droid" width="200" />](download)
+
