--- a/_layouts/default-fr.html
+++ b/_layouts/default-fr.html
@@ -31,7 +31,7 @@
         <span class="desktoponly">Langues:</span>
         {% include footer-languages.html %}
         <br>
-        <a href="imprint">Contact et mentions légales</a>
+        <a href="imprint">Mentions légales</a>
         <br>
         © 2017, 2018 Delta Chat contributors
         </p>
