--- a/_includes/footer-languages.html
+++ b/_includes/footer-languages.html
@@ -3,6 +3,7 @@
 <a href="../es/">ES</a>  |
 <a href="../fr/">FR</a>  |
 <a href="../it/">IT</a>  |
+<a href="../nb/">NB</a>  |
 <a href="../pt/">PT</a>  |
 <a href="../ru/">RU</a>  |
 <a href="../sq/">SQ</a>
