--- a/_includes/footer-languages.html
+++ b/_includes/footer-languages.html
@@ -4,6 +4,7 @@
 <a href="../fr/">FR</a>  |
 <a href="../it/">IT</a>  |
 <a href="../nb/">NB</a>  |
+<a href="../pl/">PL</a>  |
 <a href="../pt/">PT</a>  |
 <a href="../ru/">RU</a>  |
 <a href="../sq/">SQ</a>
