--- a/_layouts/default-pl.html
+++ b/_layouts/default-pl.html
@@ -35,9 +35,9 @@
 <span class="desktoponly">Język:</span>
 {% include footer-languages.html %}
 <br>
-<a href="imprint">Odcisk</a>
+<a href="imprint">Wydawca</a>
 <br>
-© 2017, 2018 Delta Chat contributors
+© 2017, 2018 twórcy Delta Chat
 </p>
 </div>
 
