add references page

--- a/_layouts/default-de.html
+++ b/_layouts/default-de.html
@@ -33,7 +33,7 @@
 <span class="desktoponly">Sprache:</span>
 {% include footer-languages.html %}
 <br>
-<a href="imprint">Impressum</a>
+<a href="references">Referenzen</a> | <a href="imprint">Impressum</a>
 <br>
 © 2017, 2018 Delta Chat contributors
 </p>
