--- a/_layouts/default-en.html
+++ b/_layouts/default-en.html
@@ -53,7 +53,7 @@
 <span class="desktoponly">Language:</span>
 {% include footer-languages.html %}
 <br>
-<a href="imprint">Imprint</a>
+<a href="references">References</a> | <a href="imprint">Imprint</a>
 <br>
 © 2017, 2018 Delta Chat contributors
 </p>
