--- a/_layouts/default-it.html
+++ b/_layouts/default-it.html
@@ -35,7 +35,7 @@
 <span class="desktoponly">Lingue:</span>
 {% include footer-languages.html %}
 <br>
-<a href="imprint">Imprint</a>
+<a href="references">Riferimenti</a> | <a href="imprint">Imprint</a>
 <br>
 © 2017, 2018 Delta Chat contributors
 </p>
