--- a/_layouts/default-nb.html
+++ b/_layouts/default-nb.html
@@ -37,7 +37,7 @@
 <span class="desktoponly">Språk:</span>
 {% include footer-languages.html %}
 <br>
-<a href="imprint">Imprint</a>
+<a href="references">Referanser</a> | <a href="imprint">Imprint</a>
 <br>
 © 2017, 2018 Delta Chat-bidragsyterne
 </p>
