--- a/_layouts/default-pl.html
+++ b/_layouts/default-pl.html
@@ -35,7 +35,7 @@
 <span class="desktoponly">Język:</span>
 {% include footer-languages.html %}
 <br>
-<a href="imprint">Wydawca</a>
+<a href="references">Referencje</a> | <a href="imprint">Wydawca</a>
 <br>
 © 2017, 2018 twórcy Delta Chat
 </p>
