--- a/_layouts/default-pt.html
+++ b/_layouts/default-pt.html
@@ -33,7 +33,7 @@
 <span class="desktoponly">Lingue:</span>
 {% include footer-languages.html %}
 <br>
-<a href="imprint">Aviso legal</a>
+<a href="references">Referências</a> | <a href="imprint">Aviso legal</a>
 <br>
 © 2017, 2018 Delta Chat contributors
 </p>
