--- a/_layouts/default-ru.html
+++ b/_layouts/default-ru.html
@@ -35,7 +35,7 @@
 <span class="desktoponly">Язык:</span> 
 {% include footer-languages.html %}
 <br>
-<a href="imprint">Выходные данные</a>
+<a href="references">Рекомендации</a> | <a href="imprint">Выходные данные</a>
 <br>
 © 2017, 2018 Delta Chat участники
 </p>
