--- a/_layouts/default-sq.html
+++ b/_layouts/default-sq.html
@@ -35,7 +35,7 @@
 <span class="desktoponly">Gjuhë:</span>
 {% include footer-languages.html %}
 <br>
-<a href="imprint">Imprint</a>
+<a href="references">Referencat</a> | <a href="imprint">Imprint</a>
 <br>
 © 2017, 2018 Kontribuesit te Delta Chat
 </p>
