--- a/_layouts/default-es.html
+++ b/_layouts/default-es.html
@@ -35,7 +35,7 @@
 <span class="desktoponly">Lengua:</span>
 {% include footer-languages.html %}
 <br>
-<a href="imprint">Aviso legal</a>
+<a href="references">Referencias</a> | <a href="imprint">Aviso legal</a>
 <br>
 © 2017, 2018 Delta Chat contributors
 </p>
