--- a/_layouts/default-en.html
+++ b/_layouts/default-en.html
@@ -17,7 +17,7 @@
 <ul>
 <li><a href="../en/">Home</a></li>
 <li><a href="features">Why</a></li>
-<li><a href="gdpr.html">GDPR/Privacy</a></li>
+<li><a href="gdpr">GDPR/Privacy</a></li>
 <li><a href="download">Download</a></li>
 <li><a href="contribute">Contribute</a></li>
 <li><a href="blog">Blog</a></li>
