add german translation of gdpr page (in the name of jankass)

--- a/_layouts/default-de.html
+++ b/_layouts/default-de.html
@@ -15,6 +15,7 @@
 <ul>
 <li><a href="../de/"><span class="desktoponly">Startseite</span><span class="nodesktop">Start</span></a></li>
 <li><a href="features">Warum</a></li>
+<li><a href="gdpr">DSGVO</a></li>
 <li><a href="download">Download</a></li>
 <li><a href="contribute">Mitwirken</a></li>
 <li><a href="blog">Blog</a></li>
