add english gdpr page to the other languages

--- a/_layouts/default-ca.html
+++ b/_layouts/default-ca.html
@@ -17,6 +17,7 @@
 <ul>
 <li><a href="../ca/">Home</a></li>
 <li><a href="features">Per què?</a></li>
+<li><a href="gdpr">GDPR</a></li>
 <li><a href="download">Descàrrega</a></li>
 <li><a href="contribute">Contribueix</a></li>
 <li><a href="blog">Blog</a></li>
