--- a/_layouts/default-es.html
+++ b/_layouts/default-es.html
@@ -17,6 +17,7 @@
 <ul>
 <li><a href="../es/">Inicio</a></li>
 <li><a href="features">Por qué?</a></li>
+<li><a href="gdpr">GDPR</a></li>
 <li><a href="download">Descargar</a></li>
 <li><a href="contribute">Soporte</a></li>
 <li><a href="blog">Blog</a></li>
