--- a/_layouts/default-fr.html
+++ b/_layouts/default-fr.html
@@ -15,6 +15,7 @@
       <ul>
         <li><a href="../fr/">Accueil</a></li>
         <li><a href="features">Présentation</a></li>
+        <li><a href="gdpr">GDPR</a></li>
         <li><a href="download">Téléchargement</a></li>
         <li><a href="contribute">Contribuer</a></li>
         <li><a href="blog">Blog</a></li>
