--- a/_layouts/default-it.html
+++ b/_layouts/default-it.html
@@ -17,6 +17,7 @@
 <ul>
 <li><a href="../it/">Home</a></li>
 <li><a href="features">Perché?</a></li>
+<li><a href="gdpr">GDPR</a></li>
 <li><a href="download">Download</a></li>
 <li><a href="contribute">Supporta</a></li>
 <li><a href="blog">Blog</a></li>
