--- a/_layouts/default-nb.html
+++ b/_layouts/default-nb.html
@@ -17,6 +17,7 @@
 <ul>
 <li><a href="../nb/">Hjem</a></li>
 <li><a href="features">Hvorfor</a></li>
+<li><a href="gdpr">GDPR</a></li>
 <li><a href="download">Last ned</a></li>
 <li><a href="contribute">Bidra</a></li>
 <li><a href="blog">Blogg</a></li>
