--- a/_layouts/default-sq.html
+++ b/_layouts/default-sq.html
@@ -17,6 +17,7 @@
 <ul>
 <li><a href="../sq/">Kreu</a></li>
 <li><a href="features">Pse</a></li>
+<li><a href="gdpr">GDPR</a></li>
 <li><a href="download">Shkarkim</a></li>
 <li><a href="contribute">Jepni ndihmesë</a></li>
 <li><a href="blog">Blog</a></li>
