--- a/_layouts/default-pl.html
+++ b/_layouts/default-pl.html
@@ -16,6 +16,7 @@
 <li><a href="../pl/">Home</a></li>
 <li><a href="features">Dlaczego</a></li>
 <li><a href="download">Pobierz</a></li>
+<li><a href="gdpr">GDPR</a></li>
 <li><a href="contribute">Wsparcie</a></li>
 <li><a href="blog">Blog</a></li>
 <li><a href="help">Pomoc</a></li>
