--- a/_layouts/default-pt.html
+++ b/_layouts/default-pt.html
@@ -15,6 +15,7 @@
 <ul>
 <li><a href="../pt/">Início</a></li>
 <li><a href="features">Por quê?</a></li>
+<li><a href="gdpr">GDPR</a></li>
 <li><a href="download">Baixe</a></li>
 <li><a href="contribute">Como ajudar</a></li>
 <li><a href="blog">Blog</a></li>
