add link to gdpr-website-statement to footer

--- a/_layouts/default-de.html
+++ b/_layouts/default-de.html
@@ -32,6 +32,7 @@
 <div id="footer">
 <p>
 <a href="references">Referenzen</a> | <a href="imprint">Impressum</a>
+| <a href="gdpr-website">Datenschutzerklärung</a>
 <br>
 <span class="desktoponly">Sprache:</span>
 {% include footer-languages.html %}
