add link to privacy policy to all footers

--- a/_layouts/default-en.html
+++ b/_layouts/default-en.html
@@ -52,6 +52,7 @@
 <div id="footer">
 <p>
 <a href="references">References</a> | <a href="imprint">Imprint</a>
+| <a href="/de/gdpr-website">Privacy Policy</a>
 <br>
 <span class="desktoponly">Language:</span>
 {% include footer-languages.html %}
