--- a/_layouts/default-es.html
+++ b/_layouts/default-es.html
@@ -34,6 +34,7 @@
 <div id="footer">
 <p>
 <a href="references">Referencias</a> | <a href="imprint">Aviso legal</a>
+| <a href="/de/gdpr-website">Privacy Policy</a>
 <br>
 <span class="desktoponly">Lengua:</span>
 {% include footer-languages.html %}
