--- a/_layouts/default-fr.html
+++ b/_layouts/default-fr.html
@@ -30,6 +30,7 @@
     <div id="footer">
       <p>
         <a href="references">Les références</a> | <a href="imprint">Mentions légales</a>
+        | <a href="/de/gdpr-website">Privacy Policy</a>
         <br>
         <span class="desktoponly">Langues:</span>
         {% include footer-languages.html %}
