--- a/_layouts/default-it.html
+++ b/_layouts/default-it.html
@@ -34,6 +34,7 @@
 <div id="footer">
 <p>
 <a href="references">Riferimenti</a> | <a href="imprint">Imprint</a>
+| <a href="/de/gdpr-website">Privacy Policy</a>
 <br>
 <span class="desktoponly">Lingue:</span>
 {% include footer-languages.html %}
