--- a/_layouts/default-nb.html
+++ b/_layouts/default-nb.html
@@ -36,6 +36,7 @@
 <div id="footer">
 <p>
 <a href="references">Referanser</a> | <a href="imprint">Imprint</a>
+| <a href="/de/gdpr-website">Privacy Policy</a>
 <br>
 <span class="desktoponly">Språk:</span>
 {% include footer-languages.html %}
