--- a/_layouts/default-pl.html
+++ b/_layouts/default-pl.html
@@ -34,6 +34,7 @@
 <div id="footer">
 <p>
 <a href="references">Referencje</a> | <a href="imprint">Wydawca</a>
+| <a href="/de/gdpr-website">Privacy Policy</a>
 <br>
 <span class="desktoponly">Język:</span>
 {% include footer-languages.html %}
