--- a/_layouts/default-pt.html
+++ b/_layouts/default-pt.html
@@ -32,6 +32,7 @@
 <div id="footer">
 <p>
 <a href="references">Referências</a> | <a href="imprint">Aviso legal</a>
+| <a href="/de/gdpr-website">Privacy Policy</a>
 <br>
 <span class="desktoponly">Lingue:</span>
 {% include footer-languages.html %}
