--- a/_layouts/default-ru.html
+++ b/_layouts/default-ru.html
@@ -33,6 +33,7 @@
 <div id="footer">
 <p>
 <a href="references">Рекомендации</a> | <a href="imprint">Выходные данные</a>
+| <a href="/de/gdpr-website">Privacy Policy</a>
 <br>
 <span class="desktoponly">Язык:</span> 
 {% include footer-languages.html %}
