--- a/_layouts/default-ca.html
+++ b/_layouts/default-ca.html
@@ -36,6 +36,7 @@
 <div id="footer">
 <p>
 <a href="references">References</a> | <a href="imprint">Emprempta</a>
+| <a href="/de/gdpr-website">Privacy Policy</a>
 <br>
 <span class="desktoponly">Language:</span>
 {% include footer-languages.html %}
