--- a/_layouts/default-sq.html
+++ b/_layouts/default-sq.html
@@ -34,6 +34,7 @@
 <div id="footer">
 <p>
 <a href="references">Referenca</a> | <a href="imprint">Imprint</a>
+| <a href="/de/gdpr-website">Privacy Policy</a>
 <br>
 <span class="desktoponly">Gjuhë:</span>
 {% include footer-languages.html %}
