add links ot the forum, closes #93

--- a/_layouts/default-en.html
+++ b/_layouts/default-en.html
@@ -20,6 +20,7 @@
 <li><a href="gdpr">GDPR/Privacy</a></li>
 <li><a href="download">Download</a></li>
 <li><a href="contribute">Contribute</a></li>
+<li><a href="https://support.delta.chat"><b>Forum</b></a></li>
 <li><a href="blog">Blog</a></li>
 <li><a href="help">FAQ</a></li>
 </ul>
