--- a/_layouts/default-de.html
+++ b/_layouts/default-de.html
@@ -18,6 +18,7 @@
 <li><a href="gdpr">DSGVO</a></li>
 <li><a href="download">Download</a></li>
 <li><a href="contribute">Mitwirken</a></li>
+<li><a href="https://support.delta.chat"><b>Neu:</b> Forum</a></li>
 <li><a href="blog">Blog</a></li>
 <li><a href="help"><span class="desktoponly">Hilfe</span><span class="nodesktop">?</span></a></li>
 </ul>
