move script and stylesheet to header-imports.html and imported it in each lang-variant

--- a/_layouts/default-sq.html
+++ b/_layouts/default-sq.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
 <meta name="description" content="Delta Chat - Shkëmbyes Mesazhesh të Atypëratyshëm Bazuar Në Email" />
 <meta name="keywords" content="delta chat, aplikacion shkëmbimi mesazhesh përmes email-i, shkarkoni delta chat" />
-<link rel="stylesheet" href="../assets/css/base.css" type="text/css" />
+{% include header-imports.html %}
 <link rel="alternate" href="https://delta.chat/feed.xml" type="application/atom+xml" title="Delta Chat News" />
 </head>
 
