--- a/_layouts/default-nb.html
+++ b/_layouts/default-nb.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
 <meta name="description" content="Delta Chat - E-postbasert lynmeldingsklient" />
 <meta name="keywords" content="delta chat, e-postlynmeldingsprogram, last ned delta chat" />
-<link rel="stylesheet" href="../assets/css/base.css" type="text/css" />
+{% include header-imports.html %}
 <link rel="alternate" href="https://delta.chat/feed.xml" type="application/atom+xml" title="Delta Chat-nyheter" />
 </head>
 
