--- a/_layouts/default-ru.html
+++ b/_layouts/default-ru.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
 <meta name="description" content="Delta Chat - месенджер основанный на электронной почте" />
 <meta name="keywords" content="delta chat, приложение электронной почты, скачать delta chat" />
-<link rel="stylesheet" href="../assets/css/base.css" type="text/css" />
+{% include header-imports.html %}
 <link rel="alternate" href="https://delta.chat/feed.xml" type="application/atom+xml" title="Новости Delta Chat" />
 </head>
 
