breaking typo fix

--- a/_includes/header-imports.html
+++ b/_includes/header-imports.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="../assets/css/base.css" type="text/css" />
-<script src="../assets/js/anchor.js"></script>
+<script src="../assets/js/anchor.min.js"></script>
 <script>
 document.addEventListener("DOMContentLoaded", function(event) {
     anchors.add();
