update copyright notice and add Forum to all translations

--- a/_layouts/default-fr.html
+++ b/_layouts/default-fr.html
@@ -18,6 +18,7 @@
         <li><a href="gdpr">GDPR</a></li>
         <li><a href="download">Téléchargement</a></li>
         <li><a href="contribute">Contribuer</a></li>
+        <li><a href="https://support.delta.chat">Forum</a></li>
         <li><a href="blog">Blog</a></li>
         <li><a href="help">FAQ</a></li>
       </ul>
@@ -35,7 +36,7 @@
         <span class="desktoponly">Langues:</span>
         {% include footer-languages.html %}
         <br>
-        © 2017, 2018 Delta Chat contributors
+        © 2017-2019 Delta Chat contributors
         </p>
     </div>
   </body>
