--- a/_layouts/default-nb.html
+++ b/_layouts/default-nb.html
@@ -20,6 +20,7 @@
 <li><a href="gdpr">GDPR</a></li>
 <li><a href="download">Last ned</a></li>
 <li><a href="contribute">Bidra</a></li>
+<li><a href="https://support.delta.chat">Forum</a></li>
 <li><a href="blog">Blogg</a></li>
 <li><a href="help">O-S-S</a></li>
 </ul>
@@ -41,7 +42,7 @@
 <span class="desktoponly">Språk:</span>
 {% include footer-languages.html %}
 <br>
-© 2017, 2018 Delta Chat-bidragsyterne
+© 2017-2019 Delta Chat-bidragsyterne
 </p>
 </div>
 
