--- a/_layouts/default-pt.html
+++ b/_layouts/default-pt.html
@@ -18,6 +18,7 @@
 <li><a href="gdpr">GDPR</a></li>
 <li><a href="download">Baixe</a></li>
 <li><a href="contribute">Como ajudar</a></li>
+<li><a href="https://support.delta.chat">Forum</a></li>
 <li><a href="blog">Blog</a></li>
 <li><a href="help">Perguntas</a></li>
 </ul>
@@ -37,7 +38,7 @@
 <span class="desktoponly">Lingue:</span>
 {% include footer-languages.html %}
 <br>
-© 2017, 2018 Delta Chat contributors
+© 2017-2019 Delta Chat contributors
 </p>
 </div>
 
