--- a/_layouts/default-ru.html
+++ b/_layouts/default-ru.html
@@ -19,6 +19,7 @@
 <li><a href="features">Зачем?</a></li>
 <li><a href="download">Скачать</a></li>
 <li><a href="contribute">Содействовать</a></li>
+<li><a href="https://support.delta.chat">форум</a></li>
 <li><a href="blog">Блог</a></li>
 <li><a href="help">Помощь</a></li>
 </ul>
@@ -38,7 +39,7 @@
 <span class="desktoponly">Язык:</span> 
 {% include footer-languages.html %}
 <br>
-© 2017, 2018 Delta Chat участники
+© 2017-2019 Delta Chat участники
 </p>
 </div>
 
