--- a/_layouts/default-sq.html
+++ b/_layouts/default-sq.html
@@ -20,6 +20,7 @@
 <li><a href="gdpr">GDPR</a></li>
 <li><a href="download">Shkarkim</a></li>
 <li><a href="contribute">Jepni ndihmesë</a></li>
+<li><a href="https://support.delta.chat">Forum</a></li>
 <li><a href="blog">Blog</a></li>
 <li><a href="help">Ndihmë</a></li>
 </ul>
@@ -39,7 +40,7 @@
 <span class="desktoponly">Gjuhë:</span>
 {% include footer-languages.html %}
 <br>
-© 2017, 2018 Kontribuesit te Delta Chat
+© 2017-2019 Kontribuesit te Delta Chat
 </p>
 </div>
 
