--- a/_layouts/default-ca.html
+++ b/_layouts/default-ca.html
@@ -20,6 +20,7 @@
 <li><a href="gdpr">GDPR</a></li>
 <li><a href="download">Descàrrega</a></li>
 <li><a href="contribute">Contribueix</a></li>
+<li><a href="https://support.delta.chat">Forum</a></li>
 <li><a href="blog">Blog</a></li>
 <li><a href="help">FAQ</a></li>
 </ul>
@@ -41,7 +42,7 @@
 <span class="desktoponly">Language:</span>
 {% include footer-languages.html %}
 <br>
-© 2017, 2018 Delta Chat contributors
+© 2017-2019 Delta Chat contributors
 </p>
 </div>
 
