--- a/_layouts/default-de.html
+++ b/_layouts/default-de.html
@@ -18,7 +18,7 @@
 <li><a href="gdpr">DSGVO</a></li>
 <li><a href="download">Download</a></li>
 <li><a href="contribute">Mitwirken</a></li>
-<li><a href="https://support.delta.chat"><b>Neu:</b> Forum</a></li>
+<li><a href="https://support.delta.chat">Forum</a></li>
 <li><a href="blog">Blog</a></li>
 <li><a href="help"><span class="desktoponly">Hilfe</span><span class="nodesktop">?</span></a></li>
 </ul>
@@ -38,7 +38,7 @@
 <span class="desktoponly">Sprache:</span>
 {% include footer-languages.html %}
 <br>
-© 2017, 2018 Delta Chat contributors
+© 2017-2019 Delta Chat contributors
 </p>
 </div>
 
