--- a/_layouts/default-es.html
+++ b/_layouts/default-es.html
@@ -20,6 +20,7 @@
 <li><a href="gdpr">GDPR</a></li>
 <li><a href="download">Descargar</a></li>
 <li><a href="contribute">Soporte</a></li>
+<li><a href="https://support.delta.chat">Forum</a></li>
 <li><a href="blog">Blog</a></li>
 <li><a href="help">Preguntas</a></li>
 </ul>
@@ -39,7 +40,7 @@
 <span class="desktoponly">Lengua:</span>
 {% include footer-languages.html %}
 <br>
-© 2017, 2018 Delta Chat contributors
+© 2017-2019 Delta Chat contributors
 </p>
 </div>
 
