--- a/_layouts/default-pl.html
+++ b/_layouts/default-pl.html
@@ -18,6 +18,7 @@
 <li><a href="download">Pobierz</a></li>
 <li><a href="gdpr">GDPR</a></li>
 <li><a href="contribute">Wsparcie</a></li>
+<li><a href="https://support.delta.chat">Forum</a></li>
 <li><a href="blog">Blog</a></li>
 <li><a href="help">Pomoc</a></li>
 </ul>
@@ -39,7 +40,7 @@
 <span class="desktoponly">Język:</span>
 {% include footer-languages.html %}
 <br>
-© 2017, 2018 twórcy Delta Chat
+© 2017-2019 twórcy Delta Chat
 </p>
 </div>
 
