--- a/_layouts/default-ru.html
+++ b/_layouts/default-ru.html
@@ -16,6 +16,7 @@
 <div id="menu">
 <ul>
 <li><a href="../ru/">Главная</a></li>
+<li><a href="download">Скачать</a></li>
 <li><a href="contribute">Содействовать</a></li>
 <li><a href="https://support.delta.chat">форум</a></li>
 <li><a href="blog">Блог</a></li>
