--- a/_layouts/default-pl.html
+++ b/_layouts/default-pl.html
@@ -14,7 +14,7 @@
 <div id="menu">
 <ul>
 <li><a href="../pl/">Home</a></li>
-<li><a href="gdpr">GDPR</a></li>
+<li><a href="download">Pobierz</a></li>
 <li><a href="contribute">Wsparcie</a></li>
 <li><a href="https://support.delta.chat">Forum</a></li>
 <li><a href="blog">Blog</a></li>
