--- a/_layouts/default-en.html
+++ b/_layouts/default-en.html
@@ -17,7 +17,7 @@
 <ul>
 <li><a href="../en/">Home</a></li>
 <li><a href="download">Download</a></li>
-<li><a href="blog">News</a></li>
+<li><a href="blog">Blog</a></li>
 <li><a href="contribute">Contribute</a></li>
 <li><a href="https://support.delta.chat">Forum</a></li>
 <li><a href="help">FAQ</a></li>
