--- a/_includes/footer-languages.html
+++ b/_includes/footer-languages.html
@@ -8,4 +8,5 @@
 <a href="../pl/">PL</a>  |
 <a href="../pt/">PT</a>  |
 <a href="../ru/">RU</a>  |
-<a href="../sq/">SQ</a>
+<a href="../sq/">SQ</a>  |
+<a href="../uk/">UK</a>
