--- a/_layouts/default-pt.html
+++ b/_layouts/default-pt.html
@@ -16,9 +16,9 @@
 <li><a href="../pt/">Início</a></li>
 <li><a href="download">Baixe</a></li>
 <li><a href="blog">Blog</a></li>
-<li><a href="contribute">Como ajudar</a></li>
-<li><a href="https://support.delta.chat">Forum</a></li>
-<li><a href="help">Perguntas</a></li>
+<li><a href="contribute">Contribua</a></li>
+<li><a href="https://support.delta.chat">Fórum</a></li>
+<li><a href="help">Ajuda</a></li>
 </ul>
 </div>
 
@@ -31,12 +31,12 @@
 <div id="footer">
 <p>
 <a href="references">Referências</a> | <a href="imprint">Aviso legal</a>
-| <a href="/de/gdpr-website">Privacy Policy</a>
+| <a href="/de/gdpr-website">Política de privacidade</a>
 <br>
-<span class="desktoponly">Lingue:</span>
+<span class="desktoponly">Língua:</span>
 {% include footer-languages.html %}
 <br>
-© 2017-2019 Delta Chat contributors
+© 2017-2019 apoiadores do Delta Chat
 </p>
 </div>
 
