fix german help menu

--- a/_layouts/default-de.html
+++ b/_layouts/default-de.html
@@ -17,7 +17,7 @@
 <li><a href="download">Download</a></li>
 <li><a href="blog">Blog</a></li>
 <li><a href="contribute">Mitwirken</a></li>
-<li><a href="help"><span class="desktoponly">Hilfe</span><span class="nodesktop">?</span></a></li>
+<li><a href="help">Hilfe</a></li>
 <li><a href="https://support.delta.chat">Forum</a></li>
 </ul>
 </div>
