move page metadata and upgrade to scss

--- a/_includes/header-imports.html
+++ b/_includes/header-imports.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="../assets/css/base.css" type="text/css" />
+<link rel="stylesheet" href="../assets/css/styles.css" type="text/css" />
 <script src="../assets/js/anchor.min.js"></script>
 <script>
 document.addEventListener("DOMContentLoaded", function(event) {
